# memory-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/db/: postgres.py  redis.py  vector_db.py
app/models/: schemas.py
app/services/: embedding_service.py  memory_service.py
